# tkgpio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
docs/examples/: motor_example.py  rgb_led.py  simple_circuit.py  test_LCD.py
docs/examples/analog_control/: analog_control.py  setup.py
docs/examples/big_circuit/: big_circuit.py  circuit_configuration.json
tkgpio/: Adafruit_CharLCD.py  Assignment 2  __init__.py  base.py  lirc.py  tkgpio.py
tkgpio/py_irsend/: irsend.py
