[metadata]
name = tkgpio
version = 0.1
author = Jan K. S.
author_email = developer@janks.software
description = A Python library to simulate Raspberry Pi GPIO devices in TkInter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wallysalami/tkgpio
keywords = raspberrypi gpio tkinter
license = MIT
classifiers =
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    gpiozero
    Pillow
    numpy
    scipy
    sounddevice
python_requires = >=3.5

[options.package_data]
tkgpio = 
    resources/**/*